# immu

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  agents.json  config.yaml
.claude-flow/hive-mind/: state.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.hive-mind/sessions/: hive-mind-prompt-hive-1776972846106.txt
data/raw/: SOURCES.md
docs/: DEVELOPMENT_LOG.md  MASTER_RESEARCH_PLAN.md  PROJECT_PLAN.md
docs/_archive/phase0/: data_capture_templates.md  iacuc_protocol_outline.md
docs/_archive/phase1/: run_plan.md
docs/manuscript/: OUTLINE.md  paper.tex  references.bib
docs/manuscript/figures/: fig1_schematic.tex
docs/phase0/: index.md  irb_outline.md  power_analysis.md  procurement.md  sops.md
src/_archive/analysis/: analysis.R
src/hla_sim/: __init__.py  build_tables.py  fetch_afnd.py  make_figures.py  simulate.py  synthetic_data.py
tests/: test_simulate.py
