[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hla-sim"
version = "0.1.0"
description = "Monte-Carlo simulation of HLA match probability and donor-pool equity under stealth-coating mismatch tolerance"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Huanxuan Li"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
